Correspondence Model returns all EObjects in some correspondence